correction mobile

--- a/css/header.css
+++ b/css/header.css
@@ -112,13 +112,16 @@ nav a:hover {
 }
 
 .liens_menu_mobile {
+  height: 70%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  line-height: 3.5;
+  line-height: 4;
 }
 
 .liens_menu_mobile a {
+  font-size: clamp(1.15rem, 0.954rem + 0.247vi, 1.25rem);
   text-decoration: none;
 }
 
